<resources>
    <string name="app_name">Contacto</string>
    <string name="app_telefono">Telefono</string>
    <string name="app_Email">Email</string>
    <string name="app_DescripcionContacto">Descripcion Contacto</string>
    <string name="app_BotonSiguiente">Siguiente</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="fecha">Fecha de nacimiento</string>
    <string name="siguiente">Siguiente</string>
    <string name="ok">Ok</string>
</resources>
